# RSSchool_EvaluationSelection

./: .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: main.yml
src/forest_ml/: data.py  eda.py  pipeline.py  train.py
tests/: test_error_cases.py  test_rsschool_evaluationselection.py  test_valid_case.py
