[tool.poetry]
name = "RSSchool_EvaluationSelection"
version = "0.1.0"
description = "Homework for RS School Machine Learning course"
authors = ["kmagritte <k.kshr@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
