[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "Homework for RS School Machine Learning course"
authors = ["kmagritte <k.kshr@yandex.ru>"]

[tool.poetry.scripts]
train = "src.forest_ml.train:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
pandas = "1.3.5"
sklearn = "^0.0"
scikit-learn = "^1.0.1"
pandas_profiling = "^3.1.0"
mlflow = "^1.22.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.910"
pytest = "^5.2"
flake8 = "^4.0.1"
nox = "^2022.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

